src/components/NewsCard/NewsCard.css
.card {
  display: flex;
  flex-direction: column;
  position: relative;
  max-width: 400px;
  width: 100%;
  padding: 0;
  background-color: #fff;
}

.card__image {
  width: 100%;
  height: 272px;
}

.card__content {
  padding: 20px;
}

.card__tag {
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
  top: 24px;
  left: 24px;
  text-align: center;
  /* width: 24px; */
  height: 40px;
  padding: 0 22px;
  border-radius: 10%;
  background-color: #fff;
  color: #1a1822;
  outline: none;
  font-family: "Roboto";
  font-weight: 500;
  font-size: 14px;
  line-height: 24px;
}

.card__btn {
  position: absolute;
  top: 24px;
  right: 24px;
  max-width: 40px;
  width: 100%;
  height: 40px;
  border-radius: 10%;
  outline: none;
  background-color: #fff;
}

.card__btn:focus {
  outline: none;
}

.card__save-btn {
  background-image: url(../../assets/save-btn-normal.svg);
}

.card__save-btn:hover {
  background-image: url(../../assets/save-btn-hover.svg);
}

.card__save-btn_marked {
  background-image: url(../../assets/save-btn-marked.svg);
}

.card__delete-btn {
  background-image: url(../../assets/trash.svg);
  background-size: contain;
  background-repeat: no-repeat;
}

.card__alert-popup {
  box-sizing: border-box;
  height: 40px;
  display: none;
  justify-content: center;
  align-items: center;
  position: absolute;
  top: 24px;
  right: 69px;
  border-radius: 10%;
  padding: 11px 20px;
  background-color: #fff;
  color: #000;
  text-align: center;
  font-family: "Roboto";
  font-weight: 500;
  font-size: 12px;
  line-height: 14px;
}

.card__btn:hover + .card__alert-popup {
  display: flex;
}

.card__pub-date {
  max-width: 128px;
  width: 100%;
  height: 24px;
  font-family: "Source Sans Pro";
  font-weight: 400;
  font-size: 18px;
  line-height: 24px;
  color: #b6bcbf;
  margin-bottom: 12px;
}

.card__header {
  max-width: 352px;
  width: 100%;
  /* height: 60px; */
  font-family: "Roboto Slab";
  font-weight: 400;
  font-size: 26px;
  line-height: 30px;
  color: #1a1822;
  margin-bottom: 16px;
}

.card__paragraph {
  max-width: 352px;
  width: 100%;
  height: 88px;
  font-weight: 400;
  font-size: 16px;
  line-height: 22px;
  color: #1a1822;
  margin-bottom: 40px;
}

.card__author {
  max-width: 352px;
  width: 100%;
  height: 20px;
  font-family: "Roboto Slab";
  font-weight: 700;
  font-size: 16px;
  line-height: 20px;
  letter-spacing: 0.4px;
  background-color: #fff;
  color: #b6bcbf;
}

@media (max-width: 760px) {
  .card {
    max-width: 224px;
  }

  .card__content {
    padding: 16px auto;
  }

  .card__header {
    margin-bottom: 10px;
    font-size: 22px;
    line-height: 24px;
  }
}

@media screen and (max-width: 320px) {
  .card {
    max-width: 288px;
    width: 100%;
    margin-bottom: 10px;
  }
}

